--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>💖 Heidy Yasmin Príncipe Castillo 💖</h1>
+  <h1>💖 Heidy Yasmin Principe Castillo 💖</h1>
   <p>¿Quieres ser mi San Valentín?</p>
   <button id="siBtn" class="boton" onclick="mostrarMensaje()">Sí quiero 💕</button>
   <button id="noBtn" class="boton" onclick="rechazar()">No quiero 💔</button>
